# c-blosc2

./: .editorconfig  .gitignore  .guix-channel  .lgtm.yml  .mailmap  .readthedocs.yaml  .travis.yml  ANNOUNCE.md  ANNOUNCE.rst  B2ND_METALAYER.rst  Blosc2Config.cmake.in  CMakeLists.txt  COMPILING_WITH_WHEELS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPING-GUIDE.rst  FAQ.md  FUNDING.yml  LICENSE.txt  README.rst  README_3RD_PART.rst  README_ARM.rst  README_B2ND_FORMAT.rst  README_B2ND_METALAYER.rst  README_CFRAME_FORMAT.rst  README_CHUNK_FORMAT.rst  README_DFRAME_FORMAT.rst  README_EFRAME_FORMAT.rst  README_EXTENSION_FILENAMES.rst  README_FORMAT.rst  README_FRAME_FORMAT.rst  README_FUZZER.md  README_HEADER.rst  README_HEADER_FORMAT.rst  README_OPENLZ.md  README_PACKED_HEADER.rst  README_SFRAME_FORMAT.rst  README_THREADED.rst  RELEASE_NOTES.md  RELEASE_NOTES.rst  (+16 more)
bench/: CMakeLists.txt  Makefile  Makefile.mingw  aggregate_multiple.py  b2bench.c  b2bench_openzl.c  bench.c  create_frame.c  delta_schunk.c  eframe_bench.c  frame_lock_bench.c  get_sparse.c  plot-speeds.py  plot-sum_openmp-results.py  read-grid-150x150.py  sframe_bench.c  sum_openmp.c  trunc_prec.c  trunc_prec_schunk.c  zero_runlen.c
bench/b2nd/: CMakeLists.txt  README_OPENLZ.md  bench_concatenate.c  bench_get_slice.c  bench_stack_append.c  bench_stack_append_openzl.c  bench_zfp_getitem.c
bench/caterva/: CMakeLists.txt  bench_get_slice.c  bench_zfp_getitem.c
bench/results-corex/: blosclz-cl1-sum_openmp-corex.out  blosclz-suite-corex.out  lz4-cl1-sum_openmp-corex.out  lz4-suite-corex.out  lz4hc-cl1-sum_openmp-corex.out  zlib-cl1-sum_openmp-corex.out  zstd-cl1-sum_openmp-corex.out
blosc/: CMakeLists.txt  b2nd-private.h  b2nd.c  b2nd_utils.c  b2nd_utils.h  bitshuffle-altivec.c  bitshuffle-altivec.h  bitshuffle-avx2.c  bitshuffle-avx2.c.orig  bitshuffle-avx2.h  bitshuffle-avx512.c  bitshuffle-avx512.h  bitshuffle-generic.c  bitshuffle-generic.h  bitshuffle-neon.c  bitshuffle-neon.c~  bitshuffle-neon.h  bitshuffle-neon.h~  bitshuffle-sse2.c  bitshuffle-sse2.h  blosc-common.h  blosc-private.h  blosc.c  blosc.h  blosc2-common.h  blosc2-export.h  blosc2-stdio.c  blosc2.c  blosc2.c:Zone.Identifier  blosc2.h  blosc2.h:Zone.Identifier  blosc2_stdio.c  blosc2_stdio.h  blosclz.c  blosclz.h  blosclz2.c  blosclz2.h  btune.c  btune.h  caterva.c  (+51 more)
blosc/win32/: pthread.c  pthread.h  stdint-windows.h  threading.c
compat/: CMakeLists.txt  README.rst  bitshuffle-2.20.0.cdata  blosc-1.18.0-bitshuffle8-nomemcpy.cdata  blosc-1.18.0-lz4-bitshuffle4-memcpy.cdata  blosc-2.0.0-bitshuffle4-memcpy.cdata  blosc-2.0.0-lz4-bitshuffle8-nomemcpy.cdata  blosc-blosclz-3.0.0.cdata  blosc-lz4-3.0.0.cdata  blosc-zstd-3.0.0.cdata  filegen-vl.c  filegen.c  shuffle.cdata  varchunks-lz4-3.0.0.b2frame  vlblocks-lz4-fixed-3.0.0.b2frame  vlblocks-lz4-variable-2.24.0.b2frame
examples/: CMakeLists.txt  README.rst  compress_file.c  contexts.c  decompress_file.c  delta_packed_schunk.c  delta_schunk.c  delta_schunk_ex.c  dframe_simple.c  eframe_simple.c  file-locking.c  find-roots.c  find_roots.c  frame_attrs.c  frame_backed_schunk.c  frame_big.c  frame_metalayers.c  frame_namespaces.c  frame_offset.c  frame_roundtrip.c  frame_simple.c  frame_umetalayers.c  frame_vlmetalayers.c  get_blocksize.c  get_set_slice.c  instrument_codec.c  many_compressors.c  multithread.c  noinit.c  pschunk_test1.c  schunk_backed_frame.c  schunk_persistent.c  schunk_persistent.c:Zone.Identifier  schunk_postfilter.c  schunk_simple.c  sframe_simple.c  simple.c  simple_frame.c  simple_schunk.c  sum_openmp.c  (+7 more)
examples/b2nd/: CMakeLists.txt  example_empty_shape.c  example_frame_generator.c  example_growth_swmr.c  example_oindex.c  example_plainbuffer.c  example_plugins_codecs.c  example_plugins_filters.c  example_print_meta.c  example_serialize.c  example_stack_images.c  stack_images.c
examples/caterva/: CMakeLists.txt  example_empty_shape.c  example_frame_generator.c  example_oindex.c  example_plainbuffer.c  example_plugins_codecs.c  example_plugins_filters.c  example_print_meta.c  example_serialize.c
plugins/: CMakeLists.txt  README.md  README.rst  plugin_utils.c  plugin_utils.h  plugins_includes.h
plugins/btunes/: CMakeLists.txt  btunes-registry.c
plugins/codecs/: CMakeLists.txt  codecs-registry.c  codecs_includes.h  register-codecs.c  register-codecs.h  register.h
plugins/filters/: CMakeLists.txt  filters-registry.c  filters_includes.h  register-filters.c  register-filters.h  register.h
plugins/test_data/: README.md  example_day_month_temp.b2nd  example_double_same_cells.b2nd  example_double_same_cells.caterva  example_float_cyclic.b2nd  example_float_cyclic.caterva  example_item_prices.b2nd  example_item_prices.caterva  example_rand.caterva  example_same_cells.caterva  example_some_matches.b2nd  example_some_matches.caterva
plugins/tuners/: CMakeLists.txt  tuners-registry.c
plugins/tunes/: CMakeLists.txt  tunes-registry.c
tests/: CMakeLists.txt  Makefile  cutest.h  gcc-segfault-issue.c  print_versions.c  test_NNQAK.c  test_all.sh  test_api.c  test_b2nd_multiwriter_lock.c  test_b2nd_set_slice_lock.c  test_bitshuffle_leftovers.c  test_bitshuffle_roundtrip.c  test_bitshuffle_roundtrip.csv  test_blosc1_compat.c  test_change_nthreads_append.c  test_common.h  test_compress_roundtrip.c  test_compress_roundtrip.csv  test_compressor.c  test_contexts.c  test_copy.c  test_delete_chunk.c  test_delta.c  test_delta_schunk.c  test_dframe.c  test_dframe_lazychunk.c  test_dict_schunk.c  test_eframe.c  test_eframe_lazychunk.c  test_empty_buffer.c  test_empty_schunk.c  test_fill_special.c  test_filters.c  test_frame.c  test_frame_get_offsets.c  test_frame_lazychunk_malformed_cbytes.c  test_frame_lock.c  test_frame_malformed_metalayers.c  test_frame_malformed_offsets.c  test_frame_malformed_trailer_len.c  (+74 more)
tests/b2nd/: CMakeLists.txt  cutest.h  test_b2nd_append.c  test_b2nd_chunk_overflow.c  test_b2nd_concatenate.c  test_b2nd_copy.c  test_b2nd_copy_buffer.c  test_b2nd_delete.c  test_b2nd_deserialize_meta_security.c  test_b2nd_expand_dims.c  test_b2nd_frame_offset.c  test_b2nd_full.c  (+25 more)
(+1224 files in other folders)
